PB-21: fixed some overflow bugs

--- a/PlaceBook/src/app/map-editor/map-editor.component.scss
+++ b/PlaceBook/src/app/map-editor/map-editor.component.scss
@@ -21,10 +21,6 @@ app-map-object {
   display: inline-block;
 }
 
-app-map {
-  margin: 10rem;
-}
-
 app-scope-tool {
   display: inline-block;
 }
